<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.suffolk.jsimons3.flickrsearch.MainActivity"
    tools:showIn="@layout/activity_main"
    android:columnCount="1">

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/queryeditText"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/queryeditText"
        android:hint="@string/queryeditTextHint" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tageditText"
            android:layout_weight="0.90"
            android:text="@string/tageditText"
            android:hint="@string/tagPrompt" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:contentDescription="@string/saveDescription"
            android:src="@android:drawable/ic_menu_save" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:background="#bf81e0"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_column="0"
        android:layout_row="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taggedSearches"
            android:id="@+id/taggedSearches"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@android:id/list"
            android:layout_weight="0.33"
            android:layout_marginTop="@dimen/taggedsearchesPadding"
            android:layout_marginBottom="@dimen/taggedsearchesPadding" />

    </LinearLayout>

</GridLayout>
